# crypto-sss-cpp

./: CMakeLists.txt  README.md
cmake/: CryptoSSSConfig.cmake.in
examples/: CMakeLists.txt  example.cpp  sss-test.cpp
src/: CMakeLists.txt
src/crypto-sss/: polynomial.cpp  polynomial.h  vsss.cpp  vsss.h  vsss_ed25519.cpp  vsss_ed25519.h  vsss_secp256k1.cpp  vsss_secp256k1.h
test/: CMakeLists.txt  sss-test.cpp
